JSW Devsb/src/objects/Investigation__c.object
<CustomObject>
    <fields>
        <fullName>Acceptance_Remarks__c</fullName>
        <label>Acceptance Remarks</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Batch_Details__c</fullName>
        <label>Batch Details</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Investigations</relationshipLabel>
        <relationshipName>Investigations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Compensation_Value__c</fullName>
        <label>Compensation Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Compensation__c</fullName>
        <label>Compensation</label>
        <picklist>
            <picklistValues>
                <fullName>IN_MT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IN_RS</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Complaint_Type__c</fullName>
        <label>Complaint Type</label>
        <picklist>
            <picklistValues>
                <fullName>Application</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Visual (Product)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non-Visual (Product)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Commercial</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Logistics</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Others</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Conclusion__c</fullName>
        <label>Conclusion</label>
        <picklist>
            <picklistValues>
                <fullName>Accept</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reject</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Date_of_Supply__c</fullName>
        <label>Date of Supply</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_of_Use__c</fullName>
        <label>Date of Use</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Dealer_Sub_Dealer__c</fullName>
        <label>Dealer/Sub-Dealer</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Det_Invest_By__c</fullName>
        <label>Det.Invest.By</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Detail_Investigation_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Detail Investigation By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Investigations1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Detail_Investigation__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Detail Investigation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>First_Investigation_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>First Investigation By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Investigations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Gate_Pass_Date__c</fullName>
        <label>Gate Pass Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Gate_Pass_No__c</fullName>
        <label>Gate Pass No</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Grade__c</fullName>
        <label>Grade</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Invoice_No__c</fullName>
        <label>Invoice No</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MT__c</fullName>
        <label>MT</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>No_Of_Bags__c</fullName>
        <label>No Of Bags</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Primary_Defect__c</fullName>
        <label>Primary Defect</label>
        <picklist>
            <picklistValues>
                <fullName>None</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Product Not Meeting BIS Specifications</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mixing of GGBS in Cement Bags</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Foreign Material with PSC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fitness</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Strength</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Formulation of Granules/Lumps</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Supply of GGBS instead of PSC in Bags</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Low Bag Weights</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cut &amp; Torn bags</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Foreign Material in GGBS/Cement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Commercial</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Logistics</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cracks</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Setting Time</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Weak Mortar Joints</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Others (Application)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Others (Visual)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Others (Non-visual)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Others (Commercial)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Others (Logistics)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Efflorescence</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Priority_Type__c</fullName>
        <label>Priority Type</label>
        <picklist>
            <picklistValues>
                <fullName>High</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Low</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medium</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>RR_CDN_Date__c</fullName>
        <label>RR/CDN Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>RR_CDN_No__c</fullName>
        <label>RR/CDN No</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rake_No__c</fullName>
        <label>Rake No</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reason_for_Acceptance__c</fullName>
        <label>Reason for Acceptance</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Remarks__c</fullName>
        <label>Remarks</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Supply_Plant__c</fullName>
        <label>Supply Plant</label>
        <picklist>
            <picklistValues>
                <fullName>Vijayanagar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nandyal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dolvi</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Transport_Type__c</fullName>
        <label>Transport Type</label>
        <picklist>
            <picklistValues>
                <fullName>Air</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Road</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Visit_Comments__c</fullName>
        <label>Visit Comments</label>
        <type>TextArea</type>
    </fields>
    <label>Investigation</label>
    <listViews>
        <fullName>APEX_Investigation</fullName>
        <filterScope>Queue</filterScope>
        <label>APEX</label>
        <queue>APEX</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>AP_CCFT_Investigation</fullName>
        <filterScope>Queue</filterScope>
        <label>AP CCFT</label>
        <queue>AP_CCFT</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>AP_RCFT_Investigation</fullName>
        <filterScope>Queue</filterScope>
        <label>AP RCFT</label>
        <queue>AP_RCFT</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Kerala_RCFT_Investigation</fullName>
        <filterScope>Queue</filterScope>
        <label>Kerala RCFT</label>
        <queue>Kerala_RCFT</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Kurnool_Team_Investigation</fullName>
        <filterScope>Queue</filterScope>
        <label>Kurnool Team</label>
        <queue>Kurnool_Team</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>South_Karnataka_CCFT_Investigation</fullName>
        <filterScope>Queue</filterScope>
        <label>Karnataka CCFT</label>
        <queue>Karnataka_CCFT</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>South_Karnataka_RCFT_Investigation</fullName>
        <filterScope>Queue</filterScope>
        <label>Karnataka RCFT</label>
        <queue>Karnataka_RCFT</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Tamil_Nadu_CCFT_Investigation</fullName>
        <filterScope>Queue</filterScope>
        <label>Tamil Nadu CCFT</label>
        <queue>Tamil_Nadu_CCFT</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Tamil_Nadu_RCFT_Investigation</fullName>
        <filterScope>Queue</filterScope>
        <label>Tamil Nadu RCFT</label>
        <queue>Tamil_Nadu_RCFT</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Telangana_CCFT_Investigation</fullName>
        <filterScope>Queue</filterScope>
        <label>Telangana CCFT</label>
        <queue>Telangana_CCFT</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Telangana_RCFT_Investigation</fullName>
        <filterScope>Queue</filterScope>
        <label>Telangana RCFT</label>
        <queue>Telangana_RCFT</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>INV-{0000}</displayFormat>
        <label>Investigation Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Investigations</pluralLabel>
    <recordTypes>
        <fullName>Additional_Investigation</fullName>
        <active>true</active>
        <label>Additional Investigation</label>
    </recordTypes>
    <recordTypes>
        <fullName>Detailed_Investigation</fullName>
        <active>true</active>
        <label>Detailed Investigation</label>
    </recordTypes>
    <recordTypes>
        <fullName>First_Investigation</fullName>
        <active>true</active>
        <label>First Investigation</label>
    </recordTypes>
    <recordTypes>
        <fullName>Quality_Investigation</fullName>
        <active>true</active>
        <label>Quality Investigation</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
</CustomObject>